Revelation changelog

---------------[ xxxx-xx-xx : 0.4.1 ]---------------

2005-03-16  Erik Grinaker <erikg@codepoet.no>

	* make io.file_monitor() handle NotSupportedError from gnome-vfs

	* fixed crash when file saving fails (invalid permissions etc)

	* display non-ascii characters in filenames correctly

	* use correct encoding (utf-8, not iso-8859-1) in data files

	* workaround for files with incorrect encoding (generated by 0.4.0)

	* properly handle datahandler.DataError

	* made the password strength check more thorough

	* make password warnings handle escape as cancel

	* fix potential crash on quit with some pygtk versions

2005-02-09  Erik Grinaker <erikg@codepoet.no>

	* make undo actually for for edit actions

	* don't crash when redoing an undone edit action

2005-02-09  Erik Grinaker <erikg@codepoet.no>

	* make a workaround for a gnome-python 2.9.x crasher bug with
	the session client

2005-02-05  Erik Grinaker <erikg@codepoet.no>

	* monitor events on preference, password generator and search
	dialogs

	* check data file password strength

2005-02-04  Erik Grinaker <erikg@codepoet.no>

	* preference, password generator and search dialogs are no
	longer modal

	* check password strength while entered, using cracklib

2005-02-03  Erik Grinaker <erikg@codepoet.no>

	* added option for autolocking file when inactive

2005-02-02  Erik Grinaker <erikg@codepoet.no>

	* ask user to reload file if it is changed outside revelation


---------------[ 2005-02-08 : 0.4.0 ]---------------

2005-02-05  Erik Grinaker <erikg@codepoet.no>

	* add --disable-mime-update and --disable-desktop-update
	configure switches, instead of relying on $(DESTDIR)

	* respect --disable-schemas-install configure switch

2005-02-05  Erik Grinaker <erikg@codepoet.no>

	* autosave after drag/drop, if enabled

2005-02-02  Erik Grinaker <erikg@codepoet.no>

	* build byte-compiled datahandler modules

2005-02-02  Erik Grinaker <erikg@codepoet.no>
