@@ -1,4 +1,4 @@
-0.4.x:
+e.4.x:
 - string cleanups
 - add "password strength" dialog
 - add import/export of PasswordSafe files
@@ -9,16 +9,18 @@
 - update documentation
 - gnome panel applets (account lookup, password generator etc)
   - show complete account tree as a popup-submenu of the applet
+  - make library modules more independent, so only a few are imported
 - check all dialog buttons, and use better stock items where useful
-e run unit tests on built libraries instead of installed ones
+- run unit tests on built libraries instead of installed ones
 - why does it ask for password when attempting to import gpasman?
 - only copy/paste entries with keyboard shortcut when tree has focus
   (ctrl-c should copy selected label in dataview when focused)
 - bugfix: crash when gnome icon theme is missing or not configured
 - option to edit instead of run on doubleclick
-- revisit the copy chain etc ui
 - bugfix: gnome.libgnome_module_info_get() removed in new gnome-python
 - clean up the build-system
+- examine drag/drop undo/redo crashes
+- update icons when theme changes
 
 
 0.5.x:
